<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/add_new" />

                <Button
                    android:id="@+id/btn_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/edit_renew" />

                <Button
                    android:id="@+id/btn_del"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/delete" />

                <Button
                    android:id="@+id/btn_re_sec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/reset" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="58dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/no."
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/ed_num"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/no."
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/btn_sec"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/search" />
            </TableRow>

        </TableLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ListView
                android:id="@+id/leader_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableRow>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>